fixed work wrap for code blocks. fixed #2.

--- a/sass/foundation/typography.sass
+++ b/sass/foundation/typography.sass
@@ -15,8 +15,11 @@ a
   &:hover, &:active
     color: $red
 
+pre
+  word-wrap: normal
 code
   background: #f5f2f0
+
 blockquote
   margin: 2em 0
   background-color: lighten($blue, 50%)
